--- a/DSC 210 Data Preprocessing.ipynb
+++ b/DSC 210 Data Preprocessing.ipynb
@@ -3285,7 +3285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "f7b62ad5-2c01-4b6c-a037-0ba1fe01ecf6",
    "metadata": {},
    "outputs": [
@@ -3294,18 +3294,26 @@
      "output_type": "stream",
      "text": [
       "(41331, 1254)\n",
-      "(41331, 1254)\n",
-      "(27554,)\n",
+      "(41331,)\n",
+      "(27554, 1254)\n",
       "(27554,)\n"
      ]
     }
    ],
    "source": [
     "print(X_train.shape)\n",
-    "print(X_train.shape)\n",
-    "print(y_test.shape)\n",
+    "print(y_train.shape)\n",
+    "print(X_test.shape)\n",
     "print(y_test.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e790706-455c-4376-935b-52b87ff49930",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
